scrollbar error fixed

--- a/style.css
+++ b/style.css
@@ -206,11 +206,14 @@ footer{
     padding: 120px 120px 30px 120px;
 }
 .social h5{
-    font-size: 20px;
+    font-size: 26px;
     line-height: 28px;
     color: #FFFFFF;
     font-weight: 500;
     margin-bottom: 16px;
+}
+.social .icon{
+    display: flex;
 }
 .social i{
     color: #ffffff;
@@ -268,20 +271,31 @@ footer .copy hr{
 }
 .card {
     width: 100%;
-    margin: 44px 10px;
+    margin: 44px 0px;
     flex-wrap: wrap;
     justify-content: space-evenly;
     gap: 20px;
 }
 .card-box {
     width: 75%;
-    padding: 50px 24px;
+    padding: 50px 0px;
+    margin-right: 0px;
 }
 .access-box{
     padding: 60px 20px;
 }
 footer {
-    padding: 20px 30px ;
+    padding: 60px 30px 30px 30px ;
+}
+.social h5{
+    font-size: 16px;
+    margin-bottom: 8px;
+}
+.social .icon a i{
+    width: 70%;
+}
+.footer .logo img{
+    width: 75%;
 }
     footer .copy p {
     font-size: 10px;
